fix: align-items

--- a/src/components/Converter/Converter.scss
+++ b/src/components/Converter/Converter.scss
@@ -16,4 +16,5 @@
 	padding: 0;
 	margin: 0;
 	flex-wrap: wrap;
+	align-items: center;
 }
